# physically-based-sky

./: .gitignore  CMakeLists.txt  README.md
dependencies/glad/: glad.c
dependencies/glad/glad/: glad.h
dependencies/stb/: stb.cpp
includes/: PathResolver.h  camera.h  shader.h
shaders/: base.vert  sky.frag
src/: main.cpp  shader.cpp
